# document-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  streamlit_demo.py
app/: streamlit_demo.py
app/constants/: constants.py
app/engine/: detect.py
app/utils/: __init__.py  commons.py
