[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Saurav Shrestha <saurav.shrestha@bitskraft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "~=8.1.2"
fastapi = "~=0.109.0"
uvicorn = "~=0.26.0"
python-multipart = "~=0.0.6"
streamlit = "~=1.31.1"
streamlit-webrtc = "~=0.47.6"
python-dotenv = "~=1.0.1"
av = "~=11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.4"
black = "~=23.12"
isort = "~=5.13"
flake8 = "~=7.0"
mypy = "~=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
